# OpenDeepHole

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  agent.yaml  attack-method-reference-catalog.md  attack-tree-threat-analysis.md  config.yaml  requirements-agent.txt  requirements.txt  run_agent.bat  run_agent.sh  start.sh
agent/: config.py  fp_reviewer.py  git_history.py  local_mcp.py  main.py  memory_api_discovery.py  opencode_integration.py  opencode_workflows.py  reporter.py  scanner.py  server.py  task_manager.py  threat_analysis_opencode.py  threat_auditor.py  updater.py  validation_debug.py  variant_hunter.py  vulnerability_validation.py
backend/: config.py  logger.py  main.py  models.py  registry.py  scan_metrics.py  source_filter.py  sse.py  threat_analysis.py  threat_data.py  validation_catalog.py
code_parser/: code_database.py  cpp_analyzer.py
deephole_client/: README.md  codegraph.py  config.py  fp_reviewer.py  git_history.py  index_store.py  local_mcp.py  main.py  mcp_probe.py  mcp_registry.py  opencode_integration.py  opencode_workflows.py  platform_runtime.py  process_artifacts.py  reporter.py  scanner.py  server.py  task_manager.py  threat_analysis_cli.py  threat_analysis_opencode.py  threat_analysis_runner.py  threat_analysis_workspace.py  threat_auditor.py  updater.py  variant_hunter.py
docs/: opencode_doc.json  opencode_task_service.md  (+1 more)
frontend/: index.html
task_agent/: README.md  __init__.py  api.py  feedback_format.py  output_format.py  pyproject.toml  result_json.py  serve_client.py  task-agent.example.yaml  task_service.py
(+419 files in other folders)
