[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opendeephole-task-agent"
version = "0.1.0"
description = "Self-contained OpenCode task and Serve management component"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["task_agent"]
package-dir = { task_agent = "." }
include-package-data = true

[tool.setuptools.package-data]
task_agent = ["task-agent.example.yaml"]
